Make it run... (not work :)).

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This Kata was originally created by Terry Hughes (http://twitter.com/#!/TerryHughes). It is already on GitHub [here](https://github.com/NotMyself/GildedRose). See also [Bobby Johnson's description of the kata](http://iamnotmyself.com/2011/02/13/refactor-this-the-gilded-rose-kata/).",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tap src/*.test.js"
   },
   "repository": {
     "type": "git",
